--- a/style.css
+++ b/style.css
@@ -1,1 +1,71 @@
+* {
+    box-sizing: border-box;
+    color: var(--white);
+}
 
+:root {
+    --dark-100: #262F38;
+    --dark-200: #1D262D;
+    --dark-300: #181D23;
+
+    --white: #FFF;
+    
+    --aqua-100: #50F5EB;
+
+    --gray-100: #f8f9f6;
+    --gray-200: #e3e8ef;
+    --gray-300: #748094;
+    --gray-400: #a2aebe;
+    --gray-500: #4c5566;
+    --gray-600: #e2e8f0;
+    --gray-700: #cbd5e0;
+    --gray-800: #a0aec0;
+    --gray-900: #f8fafc;
+
+    --black-a-50: #00000080;
+}
+
+.black-g-1 {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 50.53%, rgba(0, 0, 0, 0.552144) 78.65%, #000000 100%);
+}
+
+html {
+    min-height: 100%;
+    width: 100vw;
+    position: relative;
+}
+body {
+    position: relative;
+    overflow-x: hidden;
+    margin: 0;
+    width: 100vw;
+    height: 100%;
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    font-family: sans-serif;
+    background-color: var(--dark-300);
+    color: var(--white);
+}
+input,
+button {
+    outline: none;
+    border-style: none;
+}
+a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+@media (hover: hover) and (pointer: fine) {
+    ::-webkit-scrollbar {
+        width: 0.7em;
+    }
+    ::-webkit-scrollbar-thumb {
+        background-color: var(--dark-200);
+        border-radius: 500px;
+    }
+    ::-webkit-scrollbar-track-piece {
+        background-color: var(--dark-300);
+    }
+}
