styles(skeleton.css): add responsiveness

--- a/global.css
+++ b/global.css
@@ -36,7 +36,7 @@ html {
 }
 body {
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
     margin: 0;
     width: 100vw;
     height: 100%;
