--- a/skeleton.css
+++ b/skeleton.css
@@ -128,6 +128,7 @@ main section h2 {
     }
     main section h2 {
         margin: 0 auto;
+        text-align: center;
     }
     nav div {
         visibility: hidden;
