--- a/style.css
+++ b/style.css
@@ -63,9 +63,30 @@
     fill: var(--gray-600);
     width: 13px;
     height: 13px;
+    cursor: pointer;
 }
 .search.open input {
     color: var(--gray-400);
     font-size: 14px;
     background-color: transparent;
+}
+.categorie {
+    background-color: transparent;
+    width: fit-content;
+    height: fit-content;
+    width: 100%;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+.categorie_h2 {
+    background-color: transparent;
+    width: fit-content;
+    height: fit-content;
+}
+.categorie:hover {
+    background-color: var(--dark-100);
+}
+.aside {
+    display: flex;
+    gap: 10px;
 }
