--- a/skeleton.css
+++ b/skeleton.css
@@ -117,6 +117,7 @@ main section h2 {
 @media screen and (max-width: 500px) {
     main aside {
         left: -219px;  /* width aside */
+        padding-top: 60px;
     }
     main section {
         left: 0;
@@ -129,10 +130,6 @@ main section h2 {
     main section h2 {
         margin: 0 auto;
         text-align: center;
-    }
-    nav div {
-        visibility: hidden;
-        opacity: 0;
     }
     .hamburger {
         visibility: visible;
