--- a/style.css
+++ b/style.css
@@ -1,33 +1,33 @@
-.container-card {
+.movie-card {
     position: relative;
     cursor: pointer;
     transition: transform ease-out 300ms;
 }
 
 @media (hover:hover) and (pointer:fine) {
-    .container-card:hover {
+    .movie-card:hover {
         transform: scale(1.05);
     }
 }
 
-.container-card img {
+.movie-card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.container-card span {
+.movie-card span {
     display: flex;
 }
 
 
-.container-card svg {
+.movie-card svg {
     fill: var(--aqua-100);
     width: 12px;
     height: 12px;
 }
 
-.container-card div {
+.movie-card div {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -41,10 +41,11 @@
     gap: 7px;
 }
 
-.container-card h4 {
+.movie-card h4 {
     margin: 0;
     text-align: center;
     font-size: 12px;
+    color: #FFF; /* Always */
 }
 .title.text {
     width: fit-content;
@@ -66,7 +67,7 @@
     cursor: pointer;
 }
 .search.open input {
-    color: var(--gray-400);
+    color: var(--white);
     font-size: 14px;
     background-color: transparent;
 }
